# AppliedRoboticsEnvironment

./: .gitignore  README.md  aliases  environment.sh
0_mindstorm_simulator/0_sim_common/launch/: sim.launch
0_mindstorm_simulator/1_lego_robot/: CMakeLists.txt  package.xml
0_mindstorm_simulator/2_lego_world/: package.xml
2_estimation/0_image_elab/: CMakeLists.txt
3_control/: CMakeLists.txt
3_control/action/: FollowPath.action
3_control/include/: control_handle.hpp
3_localization/: CMakeLists.txt  package.xml
3_localization/include/: localization_handle.hpp
4_planning/: package.xml
4_planning/msg/: WaypointList.msg
5_control/: package.xml
9_project_interface/: CMakeLists.txt  package.xml
9_project_interface/config/: default_implementation.config
9_project_interface/include/: professor_interface.hpp  student_interface.hpp
9_project_interface/launch/: node_pipeline.launch  visualization.launch
9_project_interface/rviz/: config_file.rviz
9_project_interface/src/: dummy_interface.cpp  professor_interface.cpp  professor_interface_student.cpp
other/exercitation_material/00_calibration/: CMakeLists.txt  config.xml
other/exercitation_material/00_calibration/simulator_imgs/: list.xml
other/objects_fig/: cmd.txt  polygons.asy  text.asy
other/objects_fig/nums/: process.sh  (+1 more)
src/2_estimation/: image_geometry: pinhole_camera_model.cpp Source File-1.desktop  image_geometry: pinhole_camera_model.cpp Source File.desktop  image_pipeline\image_proc at melodic · ros-perception\image_pipeline.desktop
src/2_estimation/0_image_elab/: CMakeLists.txt  image_elab_nodelet.xml  package.xml
src/2_estimation/0_image_elab/include/: extrinsic_handle.hpp  generic_handle.hpp  obstacle_detector_handle.hpp  rectify_handle.hpp  robot_detector_handle.hpp  unwarp_handle.hpp  utils.hpp  utilsIP.hpp
src/2_estimation/0_image_elab/launch/: extrinsic.launch  node_image_pipeline.launch  node_image_save.launch  nodlet_image_pipeline.launch  rectify.launch
src/2_estimation/0_image_elab/msg/: ExtrinsicParams.msg  PlaneTransform.msg
src/2_estimation/0_image_elab/src/: obstacle_detector_node.cpp  raw_img_listener.cpp  rectify_node.cpp  robot_detector_node.cpp  unwarp_node.cpp
src/2_estimation/0_image_elab/src/libs/: extrinsic_handle.cpp  generic_handle.cpp  obstacle_detector_handle.cpp  rectify_handle.cpp  robot_detector_handle.cpp  unwarp_handle.cpp  utilsIP.cpp
src/2_estimation/0_image_elab/src/node/: image_loader_node.cpp  rectify_img_listener.cpp  unwarp_ground_img_listener.cpp  unwarp_robot_img_listener.cpp
src/2_estimation/0_image_elab/src/nodelets/: extrinsic_calib_nodelet.cpp  raw_img_listener_nodelet.cpp  rectify_nodelet.cpp  robot_detector_nodelet.cpp  unwarp_nodelet.cpp
src/4_planning/: CMakeLists.txt
src/5_control/: CMakeLists.txt
src/9_interfaces/: CMakeLists.txt  package.xml
src/9_interfaces/config/: camera_params.config  default_implementation.config
src/9_interfaces/include/: student_interface.hpp
src/9_interfaces/launch/: load_params.launch  pipeline.launch
src/9_interfaces/src/: dummy_interface.cpp
src/9_project_interface/: CMakeLists.txt
src/9_project_interface/config/: camera_params.config  default_implementation.config
src/9_project_interface/include/: professor_image_elab_interface.hpp  professor_interface.hpp  professor_planning_interface.hpp  student_image_elab_interface.hpp  student_interface.hpp  student_planning_interface.hpp  utils.hpp
src/9_project_interface/launch/: arena.launch  graph.launch  image_load.launch  image_load_pipeline.launch  image_saver.launch  load_params.launch  node_pipeline.launch  nodelet_pipeline .launch  nodelet_pipeline.launch  pipeline.launch  rviz.launch  teleop.launch  video_stream.launch  visualization.launch
src/9_project_interface/rqt_multiplot/: config_file.xml
src/9_project_interface/rviz/: config_file.rviz  config_file_new.rviz
src/9_project_interface/src/: dummy_interface.cpp  professor_interface.cpp  professor_interface_student.cpp
(+201 files in other folders)
