<?xml version="1.0"?>
<package format="2">
  <name>student</name>
  <version>0.0.0</version>
  <description>The transform package</description>

  
  
  <maintainer email="valerio.magnago@unitn.it"> Valerio Magnago</maintainer>

  <author email="valerio.magnago@unitn.it"> Valerio Magnago</author>
  <author email="paolo.bevilacqua@unitn.it"> Paolo Bevilacqua</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>opencv</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
